# appsec-fastapi

./: .env.example  .gitignore  README.md  db.sqlite3  pipeline.py  pyproject.toml  render.yaml  requirements.txt  setup.py  start.sh
.github/workflows/: ci.yml
.venvLibsite-packages/pygments-2.20.0.dist-info/: RECORD
.venvLibsite-packages/pytest-9.1.1.dist-info/: RECORD
.venvLibsite-packages/ruff-0.15.18.dist-info/: RECORD
.venvLibsite-packages/ruff-0.15.18.dist-info/sboms/: ruff.cyclonedx.json
app/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  utils.py
app/repositories/: historico_repo.py
app/routers/: api.py  duvidas.py  logs.py
app/services/: llm_service.py  ml_service.py  rag_service.py
ml/: _confianca.py  alvarado.py  avaliador.py  knn_engine.py  preprocessamento.py  protocolo.py  svm_engine.py
specs/: SDD-01-visao-geral.md  SDD-02-api.md  SDD-03-banco-dados.md  SDD-04-ml-pipeline.md  SDD-05-interface-usuario.md  SDD-06-implantacao.md  SDD-07-mecanismos-seguranca.md  SPEC-05-modulo-avaliacao.md  SPEC-06-rota-duvidas.md
tests/: conftest.py  test_alvarado.py  test_auth_api.py  test_auth_unit.py  test_authorization_api.py  test_avaliador.py  test_cors.py  test_knn.py  test_logs.py  test_svm.py
